--- a/css/footer.css
+++ b/css/footer.css
@@ -84,12 +84,13 @@
     border-bottom: 1px solid #fff;
 }
 
-@media (max-width:1180px){
+@media (max-width:1180px) {
     .contact_text .typing02 {
         font-size: calc(100vw * (40 / 1180));
     }
 }
-@media (max-width:768px){
+
+@media (max-width:768px) {
     .contact_text .typing02 {
         font-size: calc(100vw * (34 / 768));
     }
@@ -118,12 +119,8 @@
     align-items: center;
 }
 
-.footer .logo {
-    width: 20%;
-}
-
 .footer_text {
-    width: 60%;
+    width: 70%;
 }
 
 .footer_text ul {
@@ -131,14 +128,19 @@
 }
 
 .footer_text ul li {
-    /* display: inline-block; */
     padding-left: 10px;
 }
 
 .footer_text ul li,
-.footer_text p {
+.footer_text p,
+.footer_text a {
+    display: block;
     color: #fff;
     font-size: 1rem;
+}
+
+.footer_text a:hover {
+    text-decoration: underline;
 }
 
 .footer_text ul li::before {
@@ -159,7 +161,7 @@
 }
 
 .sns_link {
-    width: 20%;
+    width: 30%;
 }
 
 .sns_link ul {
@@ -173,7 +175,7 @@
     width: 50px;
     height: 50px;
     padding: 5px;
-    margin: 10px;
+    margin-right: 10px;
     box-sizing: border-box;
     border: 1px solid #fff;
     border-radius: 50%;
@@ -197,61 +199,57 @@
     background-color: #03c75a;
 }
 
-@media (max-width:1560px){
+@media (max-width:1560px) {
     #footer {
         padding: 0 5vw;
     }
 }
 
-@media (max-width:1180px) {
+@media (max-width:768px) {
     #footer {
-        height: 250px;
+        height: 400px;
     }
 
     .footer {
-        display: flex;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: space-evenly;
-    }
-
-    .sns_link ul {
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-    }
-
-    .sns_link ul li a {
-        display: block;
-        width: 50px;
-        height: 50px;
-        padding: 5px;
-        margin: 0 20px 0 0;
-        box-sizing: border-box;
-        border: 1px solid #fff;
-        border-radius: 50%;
+        justify-content: center;
     }
 
     .footer_text {
+        order: 2;
         width: 100%;
     }
-}
 
-@media (max-width:768px) {
-    #footer {
-        height: 350px;
-    }
 
     .footer_text ul {
         display: flex;
         flex-direction: column;
     }
 
+    .footer_text ul li,
+    .footer_text p,
+    .footer_text a {
+        font-size: 0.9rem;
+    }
+
     .footer_text ul li::before {
         display: none;
     }
 
-    .footer_text ul li {
+    .footer_text ul li,
+    .footer_text p {
         padding-left: 0;
+        padding-bottom: 10px;
+    }
+
+    .sns_link {
+        order: 1;
+        width: 100%;
+        padding-bottom: 30px;
+    }
+
+    .sns_link ul {
+        justify-content: flex-start;
     }
 }
