--- a/css/header.css
+++ b/css/header.css
@@ -187,7 +187,7 @@
 
     .m_submenu {
         display: none;
-        /* margin-top: 20px; */
+        margin-top: 20px;
     }
 
     .m_submenu li {
@@ -218,11 +218,11 @@
 
 @media (max-width:430px){
     .m_gnb>ul>li>a {
-        font-size: calc(100vw * (26 / 430));
+        font-size: calc(100vw * (25 / 430));
     }
 
     .m_submenu li a {
-        font-size: calc(100vw * (20 / 430));
+        font-size: calc(100vw * (19 / 430));
     }
 
 }
