--- a/css/company.css
+++ b/css/company.css
@@ -95,6 +95,7 @@ body.menu-open {
     width: 30%;
     font-size: 1.5rem;
     font-weight: 600;
+    color: #003b8a;
 }
 .company-title div{
     width: 70%;
