--- a/css/company.css
+++ b/css/company.css
@@ -28,7 +28,7 @@ body {
     color: #333;
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 14px;
-    line-height: 2.8em;
+    line-height: 2.6rem;
     overflow-x: hidden;
 }
 
