--- a/css/header.css
+++ b/css/header.css
@@ -160,7 +160,7 @@
         padding: 30px 0;
     }
 
-    .m_gnb>ul>li>button {
+    .m_gnb>ul>li:nth-child(1)>button, .m_gnb>ul>li:nth-child(2)>button {
         position: absolute;
         right: 5px;
         top: 40%;
