--- a/css/header.css
+++ b/css/header.css
@@ -147,6 +147,7 @@
         padding: 30px 5vw;
         box-sizing: border-box;
         transition: 0.5s ease;
+        overflow-y: auto;
     }
 
     .m_logo {
