--- a/css/certification.css
+++ b/css/certification.css
@@ -25,7 +25,7 @@ body {
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 14px;
     word-break: keep-all;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 body.menu-open {
@@ -33,13 +33,13 @@ body.menu-open {
 }
 
 #wrap {
-    width: 100%;
+    width: 100vw;
     overflow: hidden;
 }
 
 #visual_banner {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     position: relative;
 }
 
@@ -59,7 +59,7 @@ body.menu-open {
     text-align: center;
     font-size: 3.5rem;
     font-weight: 600;
-    line-height: 1.5em;
+    line-height: 1.5;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 }
@@ -70,6 +70,33 @@ body.menu-open {
     }
 }
 
+.container {
+    position: relative;
+    width: 100%;
+    max-width: calc(144rem + 12rem);
+    margin: 0 auto;
+    padding: 0 10vw;
+    box-sizing: border-box;
+}
+
+@media (max-width: 1560px) {
+    .container {
+        max-width: calc(144rem + calc(100vw * (120 / 1560)));
+        padding: 0 5vw;
+    }
+}
+
+@media (max-width: 1180px) {
+    .container {
+        max-width: calc(144rem + calc(100vw * (120 / 1180)));
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 100%;
+    }
+}
 
 
 .item-tab {
@@ -108,12 +135,12 @@ body.menu-open {
     flex-wrap: wrap;
     align-items: flex-start;
     width: auto;
-    margin-right: -4rem;
+    margin-right: -2.5rem;
 }
 
 .item-list li {
     width: calc(100%/3);
-    padding: 0 4rem 6rem 0;
+    padding: 0 2.5rem 4rem 0;
     box-sizing: border-box;
 }
 
@@ -123,7 +150,7 @@ body.menu-open {
 
 .item-list li .img {
     width: 100%;
-    height: 27.5rem;
+    height: 17.5rem;
     text-align: center;
 }
 
@@ -228,7 +255,7 @@ body.menu-open {
 
 /* 특허ㆍ인증ㆍ수상 */
 .awards {
-    margin-bottom: 18rem;
+    margin-bottom: 18vh;
 }
 
 .awards-list li .img {
@@ -239,14 +266,14 @@ body.menu-open {
 }
 
 .awards-list li .img img {
-    max-width: 16.6rem;
+    max-width: 10.6rem;
     height: auto;
 }
 
 .awards-list li .cate {
     display: block;
     max-height: 20px;
-    margin: 2.8rem 0 1.2rem;
+    margin: 1.8rem 0 0.8rem;
     color: #003b8a;
     font-size: 1.2rem;
     font-weight: 500;
@@ -329,32 +356,3 @@ body.menu-open {
     }
 }
 
-.container {
-    position: relative;
-    width: 100%;
-    max-width: calc(144rem + 12rem);
-    margin: 0 auto;
-    padding: 0 6rem;
-    box-sizing: border-box;
-}
-
-@media (max-width: 1560px) {
-    .container {
-        max-width: calc(144rem + calc(100vw * (120 / 1560)));
-        padding: 0 calc(100vw * (60 / 1560));
-    }
-}
-
-@media (max-width: 1180px) {
-    .container {
-        max-width: calc(144rem + calc(100vw * (120 / 1180)));
-        padding: 0 calc(100vw * (60 / 1180));
-    }
-}
-
-@media (max-width: 768px) {
-    .container {
-        max-width: 100%;
-        padding: 0 calc(100vw * (48 / 768));
-    }
-}
