--- a/css/history.css
+++ b/css/history.css
@@ -19,10 +19,10 @@ ul {
     list-style: none;
 }
 
-/* html {
+html {
     scroll-behavior: smooth;
     -webkit-text-size-adjust: none;
-} */
+}
 
 body {
     color: #333;
@@ -42,7 +42,7 @@ body.menu-open {
 
 #visual_banner {
     width: 100%;
-    height: 70vh;
+    height: 60vh;
     position: relative;
 }
 
@@ -62,7 +62,7 @@ body.menu-open {
     text-align: center;
     font-size: 3.5rem;
     font-weight: 600;
-    line-height: 1.5em;
+    line-height: 1.5;
     color: #fff;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 }
