--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -372,7 +372,7 @@ body.menu-open {
 }
 
 .portfolio-view__wrap {
-    background-color: #003b8a;
+/*     background-color: #003b8a; */
     padding: 6vw;
     border-radius: 25px;
 }
