--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -372,7 +372,7 @@ body.menu-open {
 }
 
 .portfolio-view__wrap {
-/*     background-color: #003b8a; */
+    /* background-color: #003b8a; */
     padding: 6vw;
     border-radius: 25px;
 }
@@ -388,13 +388,13 @@ body.menu-open {
 }
 
 .portfolio-view__top .categorys__item {
-    color: #333;
+    color: #fff;
     border: 0;
-    background-color: #fff;
+    background-color: #111;
 }
 
 .portfolio-view__title {
-    color: #fff;
+    color: #111;
     font-size: 2rem;
 }
 
