--- a/css/style.css
+++ b/css/style.css
@@ -198,34 +198,55 @@ body.menu-open {
     position: relative;
 }
 
-.business_menu>li>p {
+.business_menu .title p {
     color: #fff;
     font-size: 1.5rem;
     font-weight: 600;
     padding: 30px 0 20px 30px;
 }
 
-.business_menu>li>a {
+.business_menu .hover{
+    color: #fff;
+    height: 100%;
+    text-align: center;
+    padding: 0 20px;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+.business_menu .hover p{
+    font-size: 1.2rem;
+    transition: all 300ms;
+}
+
+.business_menu .hover a{
     display: inline-block;
     font-size: 1.2rem;
     color: #fff;
     border: 1px solid #fff;
-    margin-left: 30px;
+    margin-top: 30px;
     padding: 10px 30px 10px 20px;
 }
 
-.business_menu>li>a:hover {
+.business_menu>li:hover .hover{
+    opacity: 1;
+    transform: translateY(25%);
+    transition: all 500ms;
+
+}
+
+.business_menu .hover a:hover {
     background-color: #003b8a;
     color: #fff;
     border: none;
 }
 
-.business_menu>li>a:hover::after {
+.business_menu .hover a:hover::after {
     border-top: 1px solid #fff;
     border-right: 1px solid #fff;
 }
 
-.business_menu>li>a::after {
+.business_menu .hover a::after {
     content: '';
     display: inline-block;
     width: 10px;
