--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,14 @@ body.menu-open {
     text-align: center;
     font-size: 3rem;
     font-weight: 600;
-    line-height: 1.5;
+    line-height: 1.3;
     color: #fff;
-    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7);
+}
+
+.visual_text span{
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 .scroll_down {
@@ -129,24 +134,30 @@ body.menu-open {
     .visual_text p {
         font-size: calc(100vw * (48 / 1560));
     }
+
+    .visual_text p span{
+        font-size: calc(100vw * (24 / 1560));
+    }
 }
 
 @media (max-width:1180px) {
     .visual_text p {
         font-size: calc(100vw * (48 / 1180));
     }
+
+    .visual_text p span{
+        font-size: calc(100vw * (24 / 1180));
+    }
 }
 
 @media (max-width:768px) {
     .visual_text p {
-        width: 70%;
+        /* width: 70%; */
         font-size: calc(100vw * (48 / 768));
     }
 
-    .visual_text p br {
-        display: inline-block;
-        content: " ";
-        padding: 0 2px;
+    .visual_text p span{
+        font-size: calc(100vw * (30 / 768));
     }
 }
 
@@ -195,6 +206,7 @@ body.menu-open {
 
 .business_menu>li {
     width: 33.3%;
+    height: 100%;
     position: relative;
 }
 
@@ -202,12 +214,12 @@ body.menu-open {
     color: #fff;
     font-size: 1.5rem;
     font-weight: 600;
-    padding: 30px 0 20px 30px;
+    padding: 30px 0 0 30px;
 }
 
 .business_menu .hover{
     color: #fff;
-    /* height: 50%; */
+    height: calc(100% - 65px);
     text-align: center;
     padding: 0 30px;
     box-sizing: border-box;
@@ -230,7 +242,7 @@ body.menu-open {
 
 .business_menu>li:hover .hover{
     opacity: 1;
-    transform: translateY(15vh);
+    transform: translateY(35%);
     transition: all 500ms;
 
 }
@@ -793,6 +805,7 @@ body.menu-open {
         font-size: calc(100vw * (42 / 768));
         padding: 0 19vw 50px;
     }
+    
 }
 
 /* notice */
